[project]
name = "comfyui-llamacpp"
description = "A modular llama.cpp integration for ComfyUI - local LLM inference nodes"
version = "0.2.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.urls]
Repository = "https://github.com/Setmaster/comfyui-llamacpp"
Documentation = "https://github.com/Setmaster/comfyui-llamacpp#readme"
"Bug Tracker" = "https://github.com/Setmaster/comfyui-llamacpp/issues"

[tool.comfy]
PublisherId = "setmaster"
DisplayName = "ComfyUI llama.cpp Suite"
Icon = ""
